# ezmodel

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: ci.yml
.pyclawd/: config.py
docs/github/: README.template  build.py
docs/source/: conf.py  index.ipynb
ezmodel/: __init__.py  benchmark.py  fit.py  version.py
ezmodel/core/: __init__.py  benchmark.py  factory.py  model.py  partitioning.py  selection.py  transformation.py
ezmodel/experimental/custom/: kernel.py  lsq.py  regression.py
ezmodel/experimental/custom2/: ggp.py  kernel.py  lgp.py  optimizer.py  regr.py  usage_kernel.py  usage_regr_linear.py  util.py
ezmodel/models/: __init__.py  forest.py  gpflow.py  gpy.py  idw.py  knn.py  kriging.py  mean.py  pysotrbf.py  rbf.py  regression.py  smt.py  svr.py
ezmodel/usage/: __init__.py  scratch.py  usage_benchmark.py  usage_fit.py
ezmodel/usage/models/: usage_gpflow.py  usage_gpy.py  usage_idw.py  usage_kriging.py  usage_nearest.py  usage_rbf.py  usage_smt.py  usage_svr.py
ezmodel/util/: dist.py  metrics.py  misc.py  sample_from_func.py  test_functions.py
ezmodel/util/aggregate/: clearing.py  grid.py
ezmodel/util/partitioning/: __init__.py  crossvalidation.py  random.py
ezmodel/util/transformation/: __init__.py  plog.py  standardization.py  stoch_tunneling.py  zero_to_one.py
src/ezmodel/: benchmark.py
src/ezmodel/core/: benchmark.py  factory.py  model.py  prediction.py  transformation.py
src/ezmodel/models/: forest.py  gpflow.py  idw.py  kriging.py  mean.py
src/ezmodel/usage/: usage_benchmark.py  usage_fit.py
src/ezmodel/usage/models/: __init__.py  usage_gpy.py  usage_idw.py  usage_nearest.py  usage_rbf.py
src/ezmodel/util/: __init__.py  metrics.py  misc.py  test_functions.py
src/ezmodel/util/aggregate/: __init__.py  front_wise.py  grid.py
src/ezmodel/util/partitioning/: crossvalidation.py
src/ezmodel/util/transformation/: standardization.py  stoch_tunneling.py  zero_to_one.py
tests/: __init__.py  scratch.py  test_benchmark.py  test_benchmark_function.py  test_factory.py  test_golden.py  test_metrics.py  test_normalization.py  test_partitioning.py  test_selection.py  test_test_functions.py  test_usage.py
tests/golden/: test_golden.json
